--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.chartaxes.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.chartaxes.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ChartAxes#categoryAxis:member'
@@ -26,7 +26,7 @@ items:
       - 'excel!Excel.ChartAxes#valueAxis:member'
   - uid: 'excel!Excel.ChartAxes#categoryAxis:member'
     summary: |-
-      表示图表中的类别轴。 只读。
+      表示图表中的类别轴。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: categoryAxis
@@ -115,7 +115,7 @@ items:
                       }
   - uid: 'excel!Excel.ChartAxes#seriesAxis:member'
     summary: |-
-      表示三维图表的系列轴。 只读。
+      表示三维图表的系列轴。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: seriesAxis
@@ -153,7 +153,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ChartAxes#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -187,7 +187,7 @@ items:
         description: ''
   - uid: 'excel!Excel.ChartAxes#valueAxis:member'
     summary: |-
-      表示坐标轴中的数值轴。 只读。
+      表示坐标轴中的数值轴。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: valueAxis
@@ -224,7 +224,7 @@ items:
           });
           ```
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.ChartAxis:class'
     name: Excel.ChartAxis
@@ -236,7 +236,7 @@ references:
     name: Excel.Interfaces.ChartAxesLoadOptions
   - uid: 'excel!Excel.Interfaces.ChartAxesUpdateData:interface'
     name: Interfaces.ChartAxesUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ChartAxesData:interface'
     name: Excel.Interfaces.ChartAxesData
