--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartgridlinesdata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartgridlinesdata.yml
@@ -13,7 +13,7 @@ items:
       - 'excel!Excel.Interfaces.ChartGridlinesData#visible:member'
   - uid: 'excel!Excel.Interfaces.ChartGridlinesData#format:member'
     summary: |-
-      表示图表网格线的格式。 只读。
+      表示图表网格线的格式。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
@@ -28,7 +28,7 @@ items:
           - 'excel!Excel.Interfaces.ChartGridlinesFormatData:interface'
   - uid: 'excel!Excel.Interfaces.ChartGridlinesData#visible:member'
     summary: |-
-      表示坐标轴网格线是否可见的布尔值。
+      指定轴网格线是否可见。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
