--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.datapivothierarchydata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.datapivothierarchydata.yml
@@ -93,7 +93,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.DataPivotHierarchyData#showAs:member'
     summary: |-
-      确定数据是否应显示为特定计算汇总。
+      指定是否应将数据显示为特定的汇总计算。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showAs
@@ -108,7 +108,7 @@ items:
           - 'excel!Excel.ShowAsRule:interface'
   - uid: 'excel!Excel.Interfaces.DataPivotHierarchyData#summarizeBy:member'
     summary: |-
-      确定是否显示 DataPivotHierarchy 的所有项。
+      指定是否显示 DataPivotHierarchy 的所有项目。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: summarizeBy
