--- a/docs/docs-ref-autogen/excel_online/excel/excel.chartboxwhiskeroptions.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.chartboxwhiskeroptions.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ChartBoxwhiskerOptions#context:member'
@@ -102,7 +102,7 @@ items:
                       }
   - uid: 'excel!Excel.ChartBoxwhiskerOptions#quartileCalculation:member'
     summary: |-
-      返回或设置箱形图的四分位点计算类型。 读/写。
+      指定 box 和形图的四分四个计算类型。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: quartileCalculation
@@ -140,7 +140,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ChartBoxwhiskerOptions#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -161,7 +161,7 @@ items:
             - 'excel!Excel.ChartBoxwhiskerOptions:class'
   - uid: 'excel!Excel.ChartBoxwhiskerOptions#showInnerPoints:member'
     summary: |-
-      指定在箱形图中是否显示内部点。 读/写。
+      指定是否在 box 和形图中显示内部点。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showInnerPoints
@@ -176,7 +176,7 @@ items:
           - boolean
   - uid: 'excel!Excel.ChartBoxwhiskerOptions#showMeanLine:member'
     summary: |-
-      指定在箱形图中是否显示中线。 读/写。
+      指定是否在 box 和线形图中显示 "均值" 线。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showMeanLine
@@ -191,7 +191,7 @@ items:
           - boolean
   - uid: 'excel!Excel.ChartBoxwhiskerOptions#showMeanMarker:member'
     summary: |-
-      指定在箱形图中是否显示平均值标记。 读/写。
+      指定是否在框和形图中显示 "均值" 标记。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showMeanMarker
@@ -206,7 +206,7 @@ items:
           - boolean
   - uid: 'excel!Excel.ChartBoxwhiskerOptions#showOutlierPoints:member'
     summary: |-
-      指定在箱形图中是否显示离群值点。 读/写。
+      指定框和形图中是否显示了异常点。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showOutlierPoints
@@ -233,7 +233,7 @@ items:
           - 'excel!Excel.Interfaces.ChartBoxwhiskerOptionsData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -252,7 +252,7 @@ references:
         fullName: ' | "Inclusive" | "Exclusive"'
   - uid: 'excel!Excel.Interfaces.ChartBoxwhiskerOptionsUpdateData:interface'
     name: Interfaces.ChartBoxwhiskerOptionsUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ChartBoxwhiskerOptionsData:interface'
     name: Excel.Interfaces.ChartBoxwhiskerOptionsData
