--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.shapefontupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.shapefontupdatedata.yml
@@ -62,7 +62,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ShapeFontUpdateData#name:member'
     summary: |-
-      表示字体名称（例如“Calibri”）。 如果文本是复杂脚本或东亚语言，则这是相应的字体名称，否则是拉丁字体名称。
+      表示字体名称（例如，"Calibri"）。 如果文本是复杂脚本或东亚语言，则这是相应的字体名称，否则是拉丁字体名称。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
@@ -77,7 +77,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ShapeFontUpdateData#size:member'
     summary: |-
-      表示以磅为单位的字体大小（例如 11）。 如果 TextRange 包含具有不同字体大小的文本片段，则返回 null。
+      表示以磅为单位的字体大小（例如，11）。 如果 TextRange 包含具有不同字体大小的文本片段，则返回 null。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: size
