--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.worksheetprotectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.worksheetprotectionloadoptions.yml
@@ -29,7 +29,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorksheetProtectionLoadOptions#options:member'
     summary: |-
-      工作表保护选项。 只读。
+      指定工作表的保护选项。
 
       \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: options
@@ -44,7 +44,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.WorksheetProtectionLoadOptions#protected:member'
     summary: |-
-      表示该工作表是否受保护。 只读。
+      指定工作表是否受保护。
 
       \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: protected
