--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.nameditemdata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.nameditemdata.yml
@@ -19,7 +19,7 @@ items:
       - 'excel!Excel.Interfaces.NamedItemData#visible:member'
   - uid: 'excel!Excel.Interfaces.NamedItemData#arrayValues:member'
     summary: |-
-      返回包含已命名项目的值和类型的对象。 只读。
+      返回包含已命名项目的值和类型的对象。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: arrayValues
@@ -34,7 +34,7 @@ items:
           - 'excel!Excel.Interfaces.NamedItemArrayValuesData:interface'
   - uid: 'excel!Excel.Interfaces.NamedItemData#comment:member'
     summary: |-
-      表示与此名称相关联的注释。
+      指定与此名称关联的注释。
 
       \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: comment
@@ -49,7 +49,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.NamedItemData#formula:member'
     summary: |-
-      获取或设置的已命名项目的公式。 公式始终以等号 (=) 开头。
+      已命名项的公式。 公式始终以等号 (=) 开头。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formula
@@ -64,7 +64,7 @@ items:
           - any
   - uid: 'excel!Excel.Interfaces.NamedItemData#name:member'
     summary: |-
-      对象的名称。 只读。
+      对象的名称。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
@@ -79,7 +79,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.NamedItemData#scope:member'
     summary: |-
-      指明是否将 name 限定到工作簿或特定工作表。 可能的值为：工作表、工作簿。 只读。
+      指定名称的范围是工作簿还是特定工作表。 可能的值为：工作表、工作簿。
 
       \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: scope
@@ -94,7 +94,7 @@ items:
           - 'excel!Excel.Interfaces.NamedItemData#scope~0:complex'
   - uid: 'excel!Excel.Interfaces.NamedItemData#type:member'
     summary: |-
-      指明 name 公式返回的值的类型。 有关详细信息，请参阅 NamedItemType。 只读。
+      指定由名称的公式返回的值的类型。 有关详细信息，请参阅 NamedItemType。
 
       \[[API 集：字符串、整型、双精度、布尔值、范围、错误的 ExcelApi 1.1、数组的 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
@@ -109,7 +109,7 @@ items:
           - 'excel!Excel.Interfaces.NamedItemData#type~0:complex'
   - uid: 'excel!Excel.Interfaces.NamedItemData#value:member'
     summary: |-
-      表示 name 公式计算出的值。 对于已命名区域，将返回区域地址。 只读。
+      表示 name 公式计算出的值。 对于已命名区域，将返回区域地址。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: value
