--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.rangeborderloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.rangeborderloadoptions.yml
@@ -31,7 +31,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeBorderLoadOptions#color:member'
     summary: |-
-      代表\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线条颜色的 HTML 颜色代码。
+      代表\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线颜色的 HTML 颜色代码。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
@@ -46,7 +46,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeBorderLoadOptions#sideIndex:member'
     summary: |-
-      指示边框的特定边的常量值。 有关详细信息，请参阅 BorderIndex。 只读。
+      指示边框的特定边的常量值。 有关详细信息，请参阅 BorderIndex。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: sideIndex
