--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.chartaxistitleformat.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.chartaxistitleformat.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ChartAxisTitleFormat#border:member'
@@ -26,7 +26,7 @@ items:
       - 'excel!Excel.ChartAxisTitleFormat#toJSON:member(1)'
   - uid: 'excel!Excel.ChartAxisTitleFormat#border:member'
     summary: |-
-      表示边框格式，包括颜色、线条样式和粗细。
+      指定图表坐标轴标题的边框格式，包括颜色、linestyle 和粗细。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: border
@@ -53,7 +53,7 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ChartAxisTitleFormat#fill:member'
     summary: |-
-      表示图表填充格式。
+      指定图表坐标轴标题的填充格式。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: fill
@@ -68,7 +68,7 @@ items:
           - 'excel!Excel.ChartFill:class'
   - uid: 'excel!Excel.ChartAxisTitleFormat#font:member'
     summary: |-
-      表示图表坐标轴标题对象的字体属性，例如字体名称、字体大小、颜色等。 只读。
+      指定图表轴标题的字体属性，例如字体名称、字体大小、颜色等图表轴标题对象的字体。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
@@ -168,7 +168,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ChartAxisTitleFormat#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -201,7 +201,7 @@ items:
           - 'excel!Excel.Interfaces.ChartAxisTitleFormatData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.ChartBorder:class'
     name: Excel.ChartBorder
@@ -217,7 +217,7 @@ references:
     name: Excel.Interfaces.ChartAxisTitleFormatLoadOptions
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleFormatUpdateData:interface'
     name: Interfaces.ChartAxisTitleFormatUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleFormatData:interface'
     name: Excel.Interfaces.ChartAxisTitleFormatData
