--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartplotareadata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartplotareadata.yml
@@ -21,7 +21,7 @@ items:
       - 'excel!Excel.Interfaces.ChartPlotAreaData#width:member'
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaData#format:member'
     summary: |-
-      表示图表 plotArea 的格式。
+      指定图表 plotArea 的格式。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
@@ -36,7 +36,7 @@ items:
           - 'excel!Excel.Interfaces.ChartPlotAreaFormatData:interface'
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaData#height:member'
     summary: |-
-      表示 plotArea 的高度值。
+      指定 plotArea 的高度值。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
@@ -51,7 +51,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaData#insideHeight:member'
     summary: |-
-      表示 plotArea 的 insideHeight 值。
+      指定 plotArea 的 insideHeight 值。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: insideHeight
@@ -66,7 +66,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaData#insideLeft:member'
     summary: |-
-      表示 plotArea 的 insideLeft 值。
+      指定 plotArea 的 insideLeft 值。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: insideLeft
@@ -81,7 +81,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaData#insideTop:member'
     summary: |-
-      表示 plotArea 的 insideTop 值。
+      指定 plotArea 的 insideTop 值。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: insideTop
@@ -96,7 +96,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaData#insideWidth:member'
     summary: |-
-      表示 plotArea 的 insideWidth 值。
+      指定 plotArea 的 insideWidth 值。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: insideWidth
@@ -111,7 +111,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaData#left:member'
     summary: |-
-      表示 plotArea 的 left 值。
+      指定 plotArea 的左侧值。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: left
@@ -126,7 +126,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaData#position:member'
     summary: |-
-      表示 plotArea 的位置。
+      指定 plotArea 的位置。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: position
@@ -141,7 +141,7 @@ items:
           - 'excel!Excel.Interfaces.ChartPlotAreaData#position~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaData#top:member'
     summary: |-
-      表示 plotArea 的 top 值。
+      指定 plotArea 的最高值。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
@@ -156,7 +156,7 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaData#width:member'
     summary: |-
-      表示 plotArea 的宽度值。
+      指定 plotArea 的宽度值。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
