--- a/docs/docs-ref-autogen/visio/visio/visio.shape.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.shape.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'visio!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: visio!
     children:
       - 'visio!Visio.Shape#comments:member'
@@ -257,7 +257,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'visio!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'visio!Visio.Shape#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -350,7 +350,7 @@ items:
         type:
           - 'visio!Visio.ShapeView:class'
 references:
-  - uid: 'visio!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'visio!Visio.CommentCollection:class'
     name: Visio.CommentCollection
@@ -360,7 +360,7 @@ references:
     name: OfficeExtension.ClientResult<Visio.BoundingBox>
     fullName: OfficeExtension.ClientResult<Visio.BoundingBox>
     spec.typeScript:
-      - uid: 'visio!OfficeExtension.ClientResult:class'
+      - uid: 'office!OfficeExtension.ClientResult:class'
         name: OfficeExtension.ClientResult
         fullName: OfficeExtension.ClientResult
       - name: <
@@ -378,7 +378,7 @@ references:
     name: Visio.Interfaces.ShapeLoadOptions
   - uid: 'visio!Visio.Interfaces.ShapeUpdateData:interface'
     name: Interfaces.ShapeUpdateData
-  - uid: 'visio!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'visio!Visio.ShapeDataItemCollection:class'
     name: Visio.ShapeDataItemCollection
