commit bilingual contents

--- a/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.chartdata.yml
+++ b/docs/docs-ref-autogen/excel_1_5/excel/excel.interfaces.chartdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartData:interface'
-    summary: <span data-ttu-id="bad53-101">描述通过调用返回的数据的接口`chart.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="bad53-101">An interface describing the data returned by calling `chart.toJSON()`</span></span><!-- --><span data-ttu-id="bad53-102">.</span><span class="sxs-lookup"><span data-stu-id="bad53-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`chart.toJSON()`<!-- -->.
     name: Excel.Interfaces.ChartData
     fullName: Excel.Interfaces.ChartData
     langs:
@@ -22,9 +22,9 @@ items:
       - 'excel!Excel.Interfaces.ChartData#width:member'
   - uid: 'excel!Excel.Interfaces.ChartData#axes:member'
     summary: |-
-      <span data-ttu-id="bad53-103">表示图表坐标轴。</span><span class="sxs-lookup"><span data-stu-id="bad53-103">Represents chart axes.</span></span> <span data-ttu-id="bad53-104">只读。</span><span class="sxs-lookup"><span data-stu-id="bad53-104">Read-only.</span></span>
+      表示图表坐标轴。
 
-      <span data-ttu-id="bad53-105">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bad53-105">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: axes
     fullName: axes
     langs:
@@ -37,9 +37,9 @@ items:
           - 'excel!Excel.Interfaces.ChartAxesData:interface'
   - uid: 'excel!Excel.Interfaces.ChartData#dataLabels:member'
     summary: |-
-      <span data-ttu-id="bad53-106">表示图表上的数据标签。</span><span class="sxs-lookup"><span data-stu-id="bad53-106">Represents the datalabels on the chart.</span></span> <span data-ttu-id="bad53-107">只读。</span><span class="sxs-lookup"><span data-stu-id="bad53-107">Read-only.</span></span>
+      表示图表上的数据标签。
 
-      <span data-ttu-id="bad53-108">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bad53-108">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: dataLabels
     fullName: dataLabels
     langs:
@@ -52,9 +52,9 @@ items:
           - 'excel!Excel.Interfaces.ChartDataLabelsData:interface'
   - uid: 'excel!Excel.Interfaces.ChartData#format:member'
     summary: |-
-      <span data-ttu-id="bad53-109">封装图表区域的格式属性。</span><span class="sxs-lookup"><span data-stu-id="bad53-109">Encapsulates the format properties for the chart area.</span></span> <span data-ttu-id="bad53-110">只读。</span><span class="sxs-lookup"><span data-stu-id="bad53-110">Read-only.</span></span>
+      封装图表区域的格式属性。
 
-      <span data-ttu-id="bad53-111">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bad53-111">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -67,9 +67,9 @@ items:
           - 'excel!Excel.Interfaces.ChartAreaFormatData:interface'
   - uid: 'excel!Excel.Interfaces.ChartData#height:member'
     summary: |-
-      <span data-ttu-id="bad53-112">表示 chart 对象的高度，以磅值表示。</span><span class="sxs-lookup"><span data-stu-id="bad53-112">Represents the height, in points, of the chart object.</span></span>
+      指定 chart 对象的高度（以磅为单位）。
 
-      <span data-ttu-id="bad53-113">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bad53-113">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
     fullName: height
     langs:
@@ -82,9 +82,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartData#left:member'
     summary: |-
-      <span data-ttu-id="bad53-114">从图表左侧到工作表原点的距离，以磅值表示。</span><span class="sxs-lookup"><span data-stu-id="bad53-114">The distance, in points, from the left side of the chart to the worksheet origin.</span></span>
+      从图表左侧到工作表原点的距离，以磅值表示。
 
-      <span data-ttu-id="bad53-115">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bad53-115">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: left
     fullName: left
     langs:
@@ -97,9 +97,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartData#legend:member'
     summary: |-
-      <span data-ttu-id="bad53-116">表示图表的图例。</span><span class="sxs-lookup"><span data-stu-id="bad53-116">Represents the legend for the chart.</span></span> <span data-ttu-id="bad53-117">只读。</span><span class="sxs-lookup"><span data-stu-id="bad53-117">Read-only.</span></span>
+      表示图表的图例。
 
-      <span data-ttu-id="bad53-118">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bad53-118">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: legend
     fullName: legend
     langs:
@@ -112,9 +112,9 @@ items:
           - 'excel!Excel.Interfaces.ChartLegendData:interface'
   - uid: 'excel!Excel.Interfaces.ChartData#name:member'
     summary: |-
-      <span data-ttu-id="bad53-119">表示 chart 对象的名称。</span><span class="sxs-lookup"><span data-stu-id="bad53-119">Represents the name of a chart object.</span></span>
+      指定 chart 对象的名称。
 
-      <span data-ttu-id="bad53-120">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bad53-120">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -127,9 +127,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartData#series:member'
     summary: |-
-      <span data-ttu-id="bad53-121">表示单个系列或图表中的系列集合。</span><span class="sxs-lookup"><span data-stu-id="bad53-121">Represents either a single series or collection of series in the chart.</span></span> <span data-ttu-id="bad53-122">只读。</span><span class="sxs-lookup"><span data-stu-id="bad53-122">Read-only.</span></span>
+      表示单个系列或图表中的系列集合。
 
-      <span data-ttu-id="bad53-123">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bad53-123">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: series
     fullName: series
     langs:
@@ -142,9 +142,9 @@ items:
           - 'excel!Excel.Interfaces.ChartData#series~0:complex'
   - uid: 'excel!Excel.Interfaces.ChartData#title:member'
     summary: |-
-      <span data-ttu-id="bad53-124">表示指定图表的标题，包括标题的文本、可见性、位置和格式。</span><span class="sxs-lookup"><span data-stu-id="bad53-124">Represents the title of the specified chart, including the text, visibility, position, and formatting of the title.</span></span> <span data-ttu-id="bad53-125">只读。</span><span class="sxs-lookup"><span data-stu-id="bad53-125">Read-only.</span></span>
+      指定指定图表的标题，包括文本、可见性、位置和标题的格式。
 
-      <span data-ttu-id="bad53-126">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bad53-126">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: title
     fullName: title
     langs:
@@ -157,9 +157,9 @@ items:
           - 'excel!Excel.Interfaces.ChartTitleData:interface'
   - uid: 'excel!Excel.Interfaces.ChartData#top:member'
     summary: |-
-      <span data-ttu-id="bad53-127">表示从对象左边界至第 1 行顶部（在工作表上）或图表区域顶部（在图表上）的距离，以磅值表示。</span><span class="sxs-lookup"><span data-stu-id="bad53-127">Represents the distance, in points, from the top edge of the object to the top of row 1 (on a worksheet) or the top of the chart area (on a chart).</span></span>
+      指定从对象的上边缘到工作表上的第1行顶部或图表上的图表区顶部的距离（以磅为单位）。
 
-      <span data-ttu-id="bad53-128">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bad53-128">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
     fullName: top
     langs:
@@ -172,9 +172,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartData#width:member'
     summary: |-
-      <span data-ttu-id="bad53-129">表示 chart 对象的宽度，以磅值表示。</span><span class="sxs-lookup"><span data-stu-id="bad53-129">Represents the width, in points, of the chart object.</span></span>
+      指定 chart 对象的宽度（以磅为单位）。
 
-      <span data-ttu-id="bad53-130">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="bad53-130">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
     fullName: width
     langs:
