--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.chartpointdata.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.chartpointdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartPointData:interface'
-    summary: <span data-ttu-id="e0fd1-101">描述通过调用返回的数据的接口`chartPoint.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="e0fd1-101">An interface describing the data returned by calling `chartPoint.toJSON()`</span></span><!-- --><span data-ttu-id="e0fd1-102">.</span><span class="sxs-lookup"><span data-stu-id="e0fd1-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`chartPoint.toJSON()`<!-- -->.
     name: Excel.Interfaces.ChartPointData
     fullName: Excel.Interfaces.ChartPointData
     langs:
@@ -13,9 +13,9 @@ items:
       - 'excel!Excel.Interfaces.ChartPointData#value:member'
   - uid: 'excel!Excel.Interfaces.ChartPointData#format:member'
     summary: |-
-      <span data-ttu-id="e0fd1-103">封装图表点的格式属性。</span><span class="sxs-lookup"><span data-stu-id="e0fd1-103">Encapsulates the format properties chart point.</span></span> <span data-ttu-id="e0fd1-104">只读。</span><span class="sxs-lookup"><span data-stu-id="e0fd1-104">Read-only.</span></span>
+      封装图表点的格式属性。
 
-      <span data-ttu-id="e0fd1-105">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e0fd1-105">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -28,9 +28,9 @@ items:
           - 'excel!Excel.Interfaces.ChartPointFormatData:interface'
   - uid: 'excel!Excel.Interfaces.ChartPointData#value:member'
     summary: |-
-      <span data-ttu-id="e0fd1-106">返回图表点的值。</span><span class="sxs-lookup"><span data-stu-id="e0fd1-106">Returns the value of a chart point.</span></span> <span data-ttu-id="e0fd1-107">只读。</span><span class="sxs-lookup"><span data-stu-id="e0fd1-107">Read-only.</span></span>
+      返回图表点的值。
 
-      <span data-ttu-id="e0fd1-108">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e0fd1-108">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: value
     fullName: value
     langs:
