--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartplotareaformatdata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartplotareaformatdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaFormatData:interface'
-    summary: <span data-ttu-id="cd56f-101">描述通过调用返回的数据的接口`chartPlotAreaFormat.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="cd56f-101">An interface describing the data returned by calling `chartPlotAreaFormat.toJSON()`</span></span><!-- --><span data-ttu-id="cd56f-102">.</span><span class="sxs-lookup"><span data-stu-id="cd56f-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`chartPlotAreaFormat.toJSON()`<!-- -->.
     name: Excel.Interfaces.ChartPlotAreaFormatData
     fullName: Excel.Interfaces.ChartPlotAreaFormatData
     langs:
@@ -12,9 +12,9 @@ items:
       - 'excel!Excel.Interfaces.ChartPlotAreaFormatData#border:member'
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaFormatData#border:member'
     summary: |-
-      <span data-ttu-id="cd56f-103">表示图表 plotArea 的边框属性。</span><span class="sxs-lookup"><span data-stu-id="cd56f-103">Represents the border attributes of a chart plotArea.</span></span>
+      指定图表 plotArea 的边框属性。
 
-      <span data-ttu-id="cd56f-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="cd56f-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: border
     fullName: border
     langs:
