--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rangefontupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.rangefontupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.RangeFontUpdateData:interface'
-    summary: '<span data-ttu-id="5322a-101">一个用于更新 RangeFont 对象上的数据的接口，可用于`rangeFont.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="5322a-101">An interface for updating data on the RangeFont object, for use in `rangeFont.set({ ... })`</span></span><!-- --><span data-ttu-id="5322a-102">.</span><span class="sxs-lookup"><span data-stu-id="5322a-102"></span></span>'
+    summary: '一个用于更新 RangeFont 对象上的数据的接口，可用于`rangeFont.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.RangeFontUpdateData
     fullName: Excel.Interfaces.RangeFontUpdateData
     langs:
@@ -21,9 +21,9 @@ items:
       - 'excel!Excel.Interfaces.RangeFontUpdateData#underline:member'
   - uid: 'excel!Excel.Interfaces.RangeFontUpdateData#bold:member'
     summary: |-
-      <span data-ttu-id="5322a-103">表示字体的加粗状态。</span><span class="sxs-lookup"><span data-stu-id="5322a-103">Represents the bold status of font.</span></span>
+      表示字体的加粗状态。
 
-      <span data-ttu-id="5322a-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5322a-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: bold
     fullName: bold
     langs:
@@ -36,9 +36,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFontUpdateData#color:member'
     summary: |-
-      <span data-ttu-id="5322a-105">文本颜色的 HTML 颜色代码表示。</span><span class="sxs-lookup"><span data-stu-id="5322a-105">HTML color code representation of the text color.</span></span> <span data-ttu-id="5322a-106">例如，</span><span class="sxs-lookup"><span data-stu-id="5322a-106">E.g.</span></span> <span data-ttu-id="5322a-107">\#FF0000 表示红色。</span><span class="sxs-lookup"><span data-stu-id="5322a-107">\#FF0000 represents Red.</span></span>
+      文本颜色的 HTML 颜色代码表示形式（例如， \#FF0000 表示红色）。
 
-      <span data-ttu-id="5322a-108">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5322a-108">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
     fullName: color
     langs:
@@ -51,9 +51,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.RangeFontUpdateData#italic:member'
     summary: |-
-      <span data-ttu-id="5322a-109">表示字体的斜体状态。</span><span class="sxs-lookup"><span data-stu-id="5322a-109">Represents the italic status of the font.</span></span>
+      指定字体的斜体状态。
 
-      <span data-ttu-id="5322a-110">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5322a-110">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: italic
     fullName: italic
     langs:
@@ -66,9 +66,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFontUpdateData#name:member'
     summary: |-
-      <span data-ttu-id="5322a-111">字体名称（例如"Calibri"）</span><span class="sxs-lookup"><span data-stu-id="5322a-111">Font name (e.g. "Calibri")</span></span>
+      字体名称（例如，"Calibri"）
 
-      <span data-ttu-id="5322a-112">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5322a-112">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -81,9 +81,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.RangeFontUpdateData#size:member'
     summary: |-
-      <span data-ttu-id="5322a-113">字号</span><span class="sxs-lookup"><span data-stu-id="5322a-113">Font size.</span></span>
+      字号
 
-      <span data-ttu-id="5322a-114">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5322a-114">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: size
     fullName: size
     langs:
@@ -96,9 +96,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.RangeFontUpdateData#strikethrough:member'
     summary: |-
-      <span data-ttu-id="5322a-115">表示字体的删除线状态。</span><span class="sxs-lookup"><span data-stu-id="5322a-115">Represents the strikethrough status of font.</span></span> <span data-ttu-id="5322a-116">Null 值表示整个区域没有统一的删除线设置。</span><span class="sxs-lookup"><span data-stu-id="5322a-116">A null value indicates that the entire range doesn't have uniform Strikethrough setting.</span></span>
+      指定字体的删除线状态。 Null 值表示整个区域没有统一的删除线设置。
 
-      <span data-ttu-id="5322a-117">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5322a-117">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: strikethrough
     fullName: strikethrough
     langs:
@@ -111,9 +111,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFontUpdateData#subscript:member'
     summary: |-
-      <span data-ttu-id="5322a-118">表示字体的下标状态。</span><span class="sxs-lookup"><span data-stu-id="5322a-118">Represents the Subscript status of font.</span></span> <span data-ttu-id="5322a-119">如果区域中的所有字体均为下标，则返回 True。</span><span class="sxs-lookup"><span data-stu-id="5322a-119">Returns True if all the fonts of the range are Subscript.</span></span> <span data-ttu-id="5322a-120">如果区域的所有字体都是上标或 normal （既不是上标，也不是下标），则返回 False。</span><span class="sxs-lookup"><span data-stu-id="5322a-120">Returns False if all the fonts of the range are Superscript or normal (neither Superscript, nor Subscript).</span></span> <span data-ttu-id="5322a-121">否则返回 Null。</span><span class="sxs-lookup"><span data-stu-id="5322a-121">Returns Null otherwise.</span></span>
+      指定字体的下标状态。 如果区域中的所有字体均为下标，则返回 True。 如果区域的所有字体都是上标或 normal （既不是上标，也不是下标），则返回 False。 否则返回 Null。
 
-      <span data-ttu-id="5322a-122">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5322a-122">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: subscript
     fullName: subscript
     langs:
@@ -126,9 +126,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFontUpdateData#superscript:member'
     summary: |-
-      <span data-ttu-id="5322a-123">表示字体的上标状态。</span><span class="sxs-lookup"><span data-stu-id="5322a-123">Represents the Superscript status of font.</span></span> <span data-ttu-id="5322a-124">如果区域中的所有字体均为上标，则返回 True。</span><span class="sxs-lookup"><span data-stu-id="5322a-124">Returns True if all the fonts of the range are Superscript.</span></span> <span data-ttu-id="5322a-125">如果区域的所有字体为下标或普通（既不是上标，也不是下标），则返回 False。</span><span class="sxs-lookup"><span data-stu-id="5322a-125">Returns False if all the fonts of the range are Subscript or normal (neither Superscript, nor Subscript).</span></span> <span data-ttu-id="5322a-126">否则返回 Null。</span><span class="sxs-lookup"><span data-stu-id="5322a-126">Returns Null otherwise.</span></span>
+      指定字体的上标状态。 如果区域中的所有字体均为上标，则返回 True。 如果区域的所有字体为下标或普通（既不是上标，也不是下标），则返回 False。 否则返回 Null。
 
-      <span data-ttu-id="5322a-127">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5322a-127">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: superscript
     fullName: superscript
     langs:
@@ -141,9 +141,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.RangeFontUpdateData#tintAndShade:member'
     summary: |-
-      <span data-ttu-id="5322a-128">返回或设置一个使区域字体的颜色变亮或变暗的双精度数值，该值介于 -1（最暗）与 1（最亮）之间，初始颜色为 0。</span><span class="sxs-lookup"><span data-stu-id="5322a-128">Returns or sets a double that lightens or darkens a color for Range Font, the value is between -1 (darkest) and 1 (brightest), with 0 for the original color.</span></span> <span data-ttu-id="5322a-129">空值表示整个区域没有统一的字体 tintAndShade 设置。</span><span class="sxs-lookup"><span data-stu-id="5322a-129">A null value indicates that the entire range doesn't have uniform font tintAndShade setting.</span></span>
+      指定将区域字体的颜色变浅或变暗的双精度值，该值介于-1 （最暗）和1（最亮）之间，0表示原始颜色。 空值表示整个区域没有统一的字体 tintAndShade 设置。
 
-      <span data-ttu-id="5322a-130">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5322a-130">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tintAndShade
     fullName: tintAndShade
     langs:
@@ -156,9 +156,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.RangeFontUpdateData#underline:member'
     summary: |-
-      <span data-ttu-id="5322a-131">应用于字体的下划线类型。</span><span class="sxs-lookup"><span data-stu-id="5322a-131">Type of underline applied to the font.</span></span> <span data-ttu-id="5322a-132">有关详细信息，请参阅 RangeUnderlineStyle。</span><span class="sxs-lookup"><span data-stu-id="5322a-132">See Excel.RangeUnderlineStyle for details.</span></span>
+      应用于字体的下划线类型。 有关详细信息，请参阅 RangeUnderlineStyle。
 
-      <span data-ttu-id="5322a-133">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5322a-133">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: underline
     fullName: underline
     langs:
