--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.shapelineformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.shapelineformatloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.ShapeLineFormatLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="e800c-101">代表 shape 对象的线条格式。</span><span class="sxs-lookup"><span data-stu-id="e800c-101">Represents the line formatting for the shape object.</span></span> <span data-ttu-id="e800c-102">对于图像和几何形状，线条格式表示形状的边框。</span><span class="sxs-lookup"><span data-stu-id="e800c-102">For images and geometric shapes, line formatting represents the border of the shape.</span></span>
+      代表 shape 对象的线条格式。 对于图像和几何形状，线条格式表示形状的边框。
 
-      <span data-ttu-id="e800c-103">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e800c-103">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.ShapeLineFormatLoadOptions
     fullName: Excel.Interfaces.ShapeLineFormatLoadOptions
     langs:
@@ -20,7 +20,7 @@ items:
       - 'excel!Excel.Interfaces.ShapeLineFormatLoadOptions#visible:member'
       - 'excel!Excel.Interfaces.ShapeLineFormatLoadOptions#weight:member'
   - uid: 'excel!Excel.Interfaces.ShapeLineFormatLoadOptions#$all:member'
-    summary: '<span data-ttu-id="e800c-104">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="e800c-104">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="e800c-105">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="e800c-105">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="e800c-106">).</span><span class="sxs-lookup"><span data-stu-id="e800c-106"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -33,9 +33,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ShapeLineFormatLoadOptions#color:member'
     summary: |-
-      <span data-ttu-id="e800c-107">代表 HTML 颜色格式的线条颜色，格式\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）。</span><span class="sxs-lookup"><span data-stu-id="e800c-107">Represents the line color in HTML color format, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span>
+      代表 HTML 颜色格式的线条颜色，格式\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如，"橙色"）。
 
-      <span data-ttu-id="e800c-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e800c-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
     fullName: color
     langs:
@@ -48,9 +48,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ShapeLineFormatLoadOptions#dashStyle:member'
     summary: |-
-      <span data-ttu-id="e800c-109">表示形状的线条样式。</span><span class="sxs-lookup"><span data-stu-id="e800c-109">Represents the line style of the shape.</span></span> <span data-ttu-id="e800c-110">当线条不可见或短划线样式不一致时，返回 null。</span><span class="sxs-lookup"><span data-stu-id="e800c-110">Returns null when the line is not visible or there are inconsistent dash styles.</span></span> <span data-ttu-id="e800c-111">有关详细信息，请参阅 Excel.ShapeLineStyle。</span><span class="sxs-lookup"><span data-stu-id="e800c-111">See Excel.ShapeLineStyle for details.</span></span>
+      表示形状的线条样式。 当线条不可见或短划线样式不一致时，返回 null。 有关详细信息，请参阅 Excel.ShapeLineStyle。
 
-      <span data-ttu-id="e800c-112">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e800c-112">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: dashStyle
     fullName: dashStyle
     langs:
@@ -63,9 +63,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ShapeLineFormatLoadOptions#style:member'
     summary: |-
-      <span data-ttu-id="e800c-113">表示形状的线条样式。</span><span class="sxs-lookup"><span data-stu-id="e800c-113">Represents the line style of the shape.</span></span> <span data-ttu-id="e800c-114">当线条不可见或样式不一致时，返回 null。</span><span class="sxs-lookup"><span data-stu-id="e800c-114">Returns null when the line is not visible or there are inconsistent styles.</span></span> <span data-ttu-id="e800c-115">有关详细信息，请参阅 Excel.ShapeLineStyle。</span><span class="sxs-lookup"><span data-stu-id="e800c-115">See Excel.ShapeLineStyle for details.</span></span>
+      表示形状的线条样式。 当线条不可见或样式不一致时，返回 null。 有关详细信息，请参阅 Excel.ShapeLineStyle。
 
-      <span data-ttu-id="e800c-116">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e800c-116">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: style
     fullName: style
     langs:
@@ -78,9 +78,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ShapeLineFormatLoadOptions#transparency:member'
     summary: |-
-      <span data-ttu-id="e800c-117">将指定线条的透明度表示为从 0.0（不透明）到 1.0（清晰）的值。</span><span class="sxs-lookup"><span data-stu-id="e800c-117">Represents the degree of transparency of the specified line as a value from 0.0 (opaque) through 1.0 (clear).</span></span> <span data-ttu-id="e800c-118">当形状的透明度不一致时，返回 null。</span><span class="sxs-lookup"><span data-stu-id="e800c-118">Returns null when the shape has inconsistent transparencies.</span></span>
+      将指定线条的透明度表示为从 0.0（不透明）到 1.0（清晰）的值。 当形状的透明度不一致时，返回 null。
 
-      <span data-ttu-id="e800c-119">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e800c-119">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: transparency
     fullName: transparency
     langs:
@@ -93,9 +93,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ShapeLineFormatLoadOptions#visible:member'
     summary: |-
-      <span data-ttu-id="e800c-120">表示形状元素的线条格式是否可见。</span><span class="sxs-lookup"><span data-stu-id="e800c-120">Represents whether or not the line formatting of a shape element is visible.</span></span> <span data-ttu-id="e800c-121">当形状的可见性不一致时，返回 null。</span><span class="sxs-lookup"><span data-stu-id="e800c-121">Returns null when the shape has inconsistent visibilities.</span></span>
+      指定是否显示 shape 元素的线条格式。 当形状的可见性不一致时，返回 null。
 
-      <span data-ttu-id="e800c-122">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e800c-122">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
@@ -108,9 +108,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ShapeLineFormatLoadOptions#weight:member'
     summary: |-
-      <span data-ttu-id="e800c-123">表示线条的粗细（以磅为单位）。</span><span class="sxs-lookup"><span data-stu-id="e800c-123">Represents the weight of the line, in points.</span></span> <span data-ttu-id="e800c-124">当线条不可见或线条粗细不一致时，返回 null。</span><span class="sxs-lookup"><span data-stu-id="e800c-124">Returns null when the line is not visible or there are inconsistent line weights.</span></span>
+      表示线条的粗细（以磅为单位）。 当线条不可见或线条粗细不一致时，返回 null。
 
-      <span data-ttu-id="e800c-125">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e800c-125">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: weight
     fullName: weight
     langs:
