--- a/docs/docs-ref-autogen/visio/visio/visio.requestcontext.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.requestcontext.yml
@@ -1,20 +1,20 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'visio!Visio.RequestContext:class'
-    summary: '<span data-ttu-id="9973a-101">RequestContext 对象可方便对 Visio 应用程序提出请求。</span><span class="sxs-lookup"><span data-stu-id="9973a-101">The RequestContext object facilitates requests to the Visio application.</span></span> <span data-ttu-id="9973a-102">由于 Office 加载项和 Visio 应用程序在两个不同的进程中运行，因此需要请求上下文才能从外接程序获取对 Visio 对象模型的访问权限。</span><span class="sxs-lookup"><span data-stu-id="9973a-102">Since the Office add-in and the Visio application run in two different processes, the request context is required to get access to the Visio object model from the add-in.</span></span>'
+    summary: RequestContext 对象可方便对 Visio 应用程序提出请求。 由于 Office 加载项和 Visio 应用程序在两个不同的进程中运行，因此需要请求上下文才能从外接程序获取对 Visio 对象模型的访问权限。
     name: Visio.RequestContext
     fullName: Visio.RequestContext
     langs:
       - typeScript
     type: class
     extends:
-      - 'visio!OfficeExtension.ClientRequestContext:class'
+      - 'office!OfficeExtension.ClientRequestContext:class'
     package: visio!
     children:
       - 'visio!Visio.RequestContext:constructor(1)'
       - 'visio!Visio.RequestContext#document:member'
   - uid: 'visio!Visio.RequestContext:constructor(1)'
-    summary: <span data-ttu-id="9973a-103">构造`RequestContext`类的新实例</span><span class="sxs-lookup"><span data-stu-id="9973a-103">Constructs a new instance of the `RequestContext` class</span></span>
+    summary: 构造`RequestContext`类的新实例
     name: (constructor)(url)
     fullName: (constructor)(url)
     langs:
@@ -39,7 +39,7 @@ items:
         type:
           - 'visio!Visio.Document:class'
 references:
-  - uid: 'visio!OfficeExtension.ClientRequestContext:class'
+  - uid: 'office!OfficeExtension.ClientRequestContext:class'
     name: OfficeExtension.ClientRequestContext
   - uid: 'visio!Visio.RequestContext~0:complex'
     name: string | OfficeExtension.EmbeddedSession
@@ -47,7 +47,7 @@ references:
     spec.typeScript:
       - name: 'string | '
         fullName: 'string | '
-      - uid: 'visio!OfficeExtension.EmbeddedSession:class'
+      - uid: 'office!OfficeExtension.EmbeddedSession:class'
         name: OfficeExtension.EmbeddedSession
         fullName: OfficeExtension.EmbeddedSession
   - uid: 'visio!Visio.Document:class'
