--- a/docs/docs-ref-autogen/visio/visio/visio.selection.yml
+++ b/docs/docs-ref-autogen/visio/visio/visio.selection.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'visio!Visio.Selection:class'
     summary: |-
-      <span data-ttu-id="d0687-101">表示页面中的 Selection 对象。</span><span class="sxs-lookup"><span data-stu-id="d0687-101">Represents the Selection in the page.</span></span>
+      表示页面中的 Selection 对象。
 
-      <span data-ttu-id="d0687-102">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="d0687-102">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: Visio.Selection
     fullName: Visio.Selection
     langs:
       - typeScript
     type: class
     extends:
-      - 'visio!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: visio!
     children:
       - 'visio!Visio.Selection#context:member'
@@ -20,7 +20,7 @@ items:
       - 'visio!Visio.Selection#shapes:member'
       - 'visio!Visio.Selection#toJSON:member(1)'
   - uid: 'visio!Visio.Selection#context:member'
-    summary: <span data-ttu-id="d0687-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="d0687-103">The request context associated with the object.</span></span> <span data-ttu-id="d0687-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="d0687-104">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -32,7 +32,7 @@ items:
         type:
           - 'visio!Visio.RequestContext:class'
   - uid: 'visio!Visio.Selection#load:member(1)'
-    summary: <span data-ttu-id="d0687-105">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="d0687-105">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="d0687-106">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="d0687-106">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -46,11 +46,11 @@ items:
         description: ''
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="d0687-107">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="d0687-107">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'visio!Visio.Selection#load:member(2)'
-    summary: <span data-ttu-id="d0687-108">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="d0687-108">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="d0687-109">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="d0687-109">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -64,14 +64,14 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="d0687-110">其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="d0687-110">Where propertyNamesAndPaths.select is a comma-delimited string that specifies the properties to load, and propertyNamesAndPaths.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: 其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。
           type:
             - '{ select?: string; expand?: string; }'
   - uid: 'visio!Visio.Selection#shapes:member'
     summary: |-
-      <span data-ttu-id="d0687-111">获取所选内容的形状。</span><span class="sxs-lookup"><span data-stu-id="d0687-111">Gets the Shapes of the Selection.</span></span> <span data-ttu-id="d0687-112">只读。</span><span class="sxs-lookup"><span data-stu-id="d0687-112">Read-only.</span></span>
+      获取所选内容的形状。 只读。
 
-      <span data-ttu-id="d0687-113">\[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]</span><span class="sxs-lookup"><span data-stu-id="d0687-113">\[ [API set: 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview) \]</span></span>
+      \[[API 集： 1.1](/office/dev/add-ins/reference/overview/visio-javascript-reference-overview)\]
     name: shapes
     fullName: shapes
     langs:
@@ -83,7 +83,7 @@ items:
         type:
           - 'visio!Visio.ShapeCollection:class'
   - uid: 'visio!Visio.Selection#toJSON:member(1)'
-    summary: '<span data-ttu-id="d0687-114">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="d0687-114">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="d0687-115">.</span><span class="sxs-lookup"><span data-stu-id="d0687-115"></span></span> <span data-ttu-id="d0687-116">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="d0687-116"></span></span><!-- --><span data-ttu-id="d0687-117">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始的 Visio. Selection 对象是一个 API 对象，但`toJSON`该方法返回一个简单的 JavaScript 对象（类型为`Visio.Interfaces.SelectionData`</span><span class="sxs-lookup"><span data-stu-id="d0687-117">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Visio.Selection object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Visio.Interfaces.SelectionData`</span></span><!-- --><span data-ttu-id="d0687-118">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="d0687-118">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始的 Visio. Selection 对象是一个 API 对象，但`toJSON`该方法返回一个简单的 JavaScript 对象（类型为`Visio.Interfaces.SelectionData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -96,7 +96,7 @@ items:
           - 'visio!Visio.Interfaces.SelectionData:interface'
         description: ''
 references:
-  - uid: 'visio!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'visio!Visio.RequestContext:class'
     name: RequestContext
